--- a/blog.css
+++ b/blog.css
@@ -1,17 +1,21 @@
+html{
+     font-size: 62.5%;
+}
+
 .menu{
      background-color: rgb(7, 56, 216);
-     height: 110px;
-     border-radius: 20px;
+     height: 11rem;
+     border-radius: 2rem;
 }
 .menu h1{
      float:left;
-     padding-left: 30px;
+     padding-left: 3rem;
      color: white;
      font-weight: bolder;
-     font-size: 34px;
+     font-size: 2.6rem;
 }
 .menu h1:hover{
-     font-size:28px;
+     font-size:3.4rem;
 }
 .menu ul{
      overflow: auto;
@@ -19,16 +23,16 @@
 .menu li{
      float: right;
      list-style: none;
-     padding-top: 50px;
+     padding-top: 5rem;
 }
 .menu li a{
-     font-size: 20px;
-     padding-right: 50px;
+     font-size: 2rem;
+     padding-right: 5rem;
      font-weight:bolder;
      color:white;
 }
 .menu li a:hover{
-     font-size:28px;
+     font-size:2.8rem;
 }
 body{
      height:auto;
@@ -41,7 +45,7 @@ body{
 }
 .top{
      opacity:4;
-     top: -36px;
+     top: 0px;
      left: 35%;
      width: 33%;
      position: relative;
@@ -57,7 +61,7 @@ body{
     color:#162a8d;
 }
 .lis{
-     margin-bottom: 20px;
+     margin-bottom: 2rem;
 }
 .ul1{
      list-style: none;
@@ -66,31 +70,32 @@ body{
 .div2{
      background-color: rgb(49 47 153 / 30%);
      width: 50%;
-     border-radius: 300px;
+     border-radius: 30rem;
      margin: auto;
      text-align:left;
-     padding-left: 110px;
-     padding-top: 5px;
-     padding-bottom: 30px;
-     padding-right: 100px;
+     padding-left: 11rem;
+     padding-top: .5rem;
+     padding-bottom: 3rem;
+     padding-right: 10rem;
+     font-size: 1.8rem;
 }
 .div2 a{
-     border: 1px solid black;
-     border-radius: 14px;
+     border: .1rem solid black;
+     border-radius: 1.4rem;
      background-color:rgb(236, 235, 163);
      color:rgb(7 10 48);
      font-weight: bold;
-     padding: 15px;
-     margin-top: 89px;
-     margin-left: 15px;
+     padding: 1.5rem;
+     margin-top: 8.9rem;
+     margin-left: 1.5rem;
 }
 .div2 p{
-     padding-bottom: 25px;
+     padding-bottom: 2.5rem;
 }
 .div2 a:hover{
      color: black;
      background-color: rgb(93 192 238 / 20%);
-     font-size: 18px;
+     font-size: 1.8rem;
 }
 
 
@@ -98,28 +103,38 @@ body{
 .foot{
      background-color:rgb(7, 56, 216);
      text-align: center;
-     padding-top: 20px;
-     padding-bottom: 50px;
+     padding-top: 2rem;
+     padding-bottom: 5rem;
      color: white;
-     font-size: 23px;
+     font-size: 2.3rem;
      font-weight: bold;
-     margin-top: 30px;
-     border-top-right-radius: 30px;
-     border-radius: 30px;
+     margin-top: 3rem;
+     border-top-right-radius: 3rem;
+     border-radius: 3rem;
 }
 .ul1{
      list-style: none;
-     padding:1px 25px 3px 4px;
-     padding-top: 20px;
+     padding:.1rem 2.5rem .3rem .4rem;
+     padding-top: 2rem;
 }
 .li2{
      display: inline;
-     padding-left: 40px;
+     padding-left: 4rem;
      color: white;
      /* padding-top: 15px; */
      /* padding-bottom: 15px; */
 }
 .li2 a i{
      color: white;
-     font-size: 35px;
+     font-size: 3.5rem;
 }
+/* @media(max-widht:500px){
+     html {
+          font-size: 50%;
+     }
+}
+@media(max-widht:268px){
+     html {
+          font-size: 45%;
+     }
+} */
